# RTSST_ROS

./: README.md  RTSST.yaml
devel/: .catkin
devel/lib/RTStitch/: rtstitch_node.py
devel/lib/pkgconfig/: RTStab.pc  RTStitch.pc  YOLOv8_Tracking.pc  usb_cam.pc
devel/lib/python3/dist-packages/RTStab/: __init__.py
devel/lib/usb_cam/: usb_cam_node
devel/share/RTStab/cmake/: RTStabConfig.cmake
devel/share/RTStitch/cmake/: RTStitchConfig.cmake
devel/share/YOLOv8_Tracking/cmake/: YOLOv8_TrackingConfig.cmake
devel/share/usb_cam/cmake/: usb_camConfig.cmake
src/RTStab/: CMakeLists.txt  package.xml  setup.py
src/RTStab/launch/: rtstab.launch
src/RTStab/src/: rtstab_node.py
src/RTStab/src/NNDVS/: eval_nus.py  eval_nus.sh  realtime.py  realtime_alpha.py  requirements.txt  utils.py
src/RTStab/src/NNDVS/dataset/: nus_dataset.py
src/RTStitch/: CMakeLists.txt
src/RTStitch/launch/: rtstitch.launch
src/YOLOv8_Tracking/: CMakeLists.txt
src/YOLOv8_Tracking/launch/: yolov8_tracking.launch
src/YOLOv8_Tracking/src/: yolov8_tracking_node.py
