<?xml version="1.0"?>
<package format="2">
  <name>RTStab</name>
  <version>0.0.1</version>
  <description>The RTStab package</description>

  <maintainer email="your-email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>usb_cam</depend>
  <depend>cv_bridge</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
</package>

